<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:backgroundTint="@color/verylightgrey"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">


        <TextView
            android:textColor="@color/black"
            android:id="@+id/stickerTitleParticular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/title"
            android:ellipsize="end"/>

        <TextView
            android:textColor="@color/black"
            android:id="@+id/stickerDescriptionParticular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/stickerTitleParticular"
            android:textSize="20sp"
            android:text="@string/description"
            />

        <TextView
            android:textColor="@color/black"
            android:id="@+id/rewardTextParticular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/stickerDescriptionParticular"
            android:text="@string/reward"
            />

        <TextView
            android:textColor="@color/black"
            android:id="@+id/participantsTextParticular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rewardTextParticular"
            android:text="@string/participants"
            />
    </RelativeLayout>

</androidx.cardview.widget.CardView>