<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/particularSignInButton"
        android:layout_width="223dp"
        android:layout_height="50dp"
        android:layout_marginStart="161dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="132dp"
        android:background="@drawable/login_button_shape"
        android:textColor="@color/white"
        android:text="@string/Log_in_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="162dp"
        android:background="@color/black"
        android:textColor="@color/white"
        android:layout_marginBottom="63dp"
        android:text="@string/Sign_up_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/particularSignInButton" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="279dp"
        android:layout_height="52dp"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="38dp"
        android:background="@drawable/box_user_type_choice"
        android:checkedButton="@+id/particularButton"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/particularSignInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/particularButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_widget_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/particular"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/advertiserButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_widget_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/advertiser"
            android:textColor="@color/white" />
    </RadioGroup>

    <ImageView
        android:id="@+id/pubeoAdvertisingMain"
        android:layout_width="572dp"
        android:layout_height="339dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/logo_advertising_desc"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pubeo_advertising" />

    <TextView
        android:id="@+id/youAreId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="253dp"
        android:layout_marginBottom="25dp"
        android:text="@string/you_are"
        android:textColor="@color/greyText"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>