<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Advertiser.CompanyInformationsActivity">

    <View
        android:id="@+id/blackBandAdvertiserCompanyInfos"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/whiteArrowCompanyInformations"
        android:layout_width="43dp"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="13dp"
        android:contentDescription="@string/back_arrow_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_white_24dp" />

    <TextView
        android:id="@+id/createCompanyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="16dp"
        android:text="@string/createCompany"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/blackBandAdvertiserCompanyInfos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/blackBandAdvertiserCompanyInfos"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/companyLogoId"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="140dp"
        android:contentDescription="@string/profile_pic_desc"
        android:src="@drawable/ic_shop_svgrepo_com"
        app:civ_border_color="@color/black"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blackBandAdvertiserCompanyInfos" />

    <TextView
        android:id="@+id/logoTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="131dp"
        android:layout_marginTop="20dp"
        android:text="@string/brandLogo"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyLogoId" />

    <ScrollView
        android:id="@+id/scrollViewSignUpCompanyProfile"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoTextId">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/companyNameField"
                android:layout_width="357dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="27dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="620dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/companyNameFieldEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/companyName"
                    android:inputType="text"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="18dp"
                    tools:layout_editor_absoluteY="617dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/companyVATField"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="27dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/companyNameField">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/companyVATFieldEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/VATNumber"
                    android:inputType="number"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="18dp"
                    tools:layout_editor_absoluteY="617dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/companyPhoneField"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="27dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/companyVATField">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/companyPhoneFieldEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="18dp"
                    tools:layout_editor_absoluteY="617dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/companyAddressField"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="27dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/companyPhoneField"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="620dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/companyAddressFieldEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/companyAddress"
                    android:inputType="text"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="18dp"
                    tools:layout_editor_absoluteY="617dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/companyPostalCodeField"
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="27dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/companyAddressField">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/companyPostalCodeFieldEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/postalCodeHint"
                    android:inputType="number"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="18dp"
                    tools:layout_editor_absoluteY="617dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/VATLogoId"
                android:layout_width="32dp"
                android:layout_height="0dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/VAT_desc"
                app:layout_constraintBottom_toBottomOf="@+id/companyVATField"
                app:layout_constraintEnd_toStartOf="@+id/companyVATField"
                app:layout_constraintTop_toTopOf="@+id/companyVATField"
                app:srcCompat="@drawable/ic_work_grey_700_24dp" />

            <ImageView
                android:id="@+id/phoneLogoId"
                android:layout_width="32dp"
                android:layout_height="0dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/phone_desc"
                app:layout_constraintBottom_toBottomOf="@+id/companyPhoneField"
                app:layout_constraintEnd_toStartOf="@+id/companyPhoneField"
                app:layout_constraintTop_toTopOf="@+id/companyPhoneField"
                app:srcCompat="@drawable/ic_phone_grey_700_24dp" />

            <ImageView
                android:id="@+id/businessLogoId"
                android:layout_width="32dp"
                android:layout_height="0dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/business_desc"
                app:layout_constraintBottom_toBottomOf="@+id/companyAddressField"
                app:layout_constraintEnd_toStartOf="@+id/companyAddressField"
                app:layout_constraintTop_toTopOf="@+id/companyAddressField"
                app:srcCompat="@drawable/ic_business_grey_700_24dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/continueInformationsAdvertiserButton"
        android:layout_width="252dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/login_button_shape"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollViewSignUpCompanyProfile" />

</androidx.constraintlayout.widget.ConstraintLayout>